<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.czy</groupId>
    <artifactId>base</artifactId>
    <version>1.0-SNAPSHOT</version>
    <!--父模块必须是pom类型打包-->
    <packaging>pom</packaging>
    <modules>
        <module>../fx</module>
        <module>../core</module>
        <module>../util</module>
        <module>../mq</module>
        <module>../javase_study</module>
        <module>../psychology</module>
        <module>../car_server</module>
        <module>../question_bank</module>
        <module>../http</module>
        <module>../task</module>
        <module>../user</module>
        <module>../jdbc</module>
        <module>../log</module>
    </modules>
    <properties>
        <encoding>UTF-8</encoding>
        <java.version>14</java.version>
        <maven-plugin.version>3.8.1</maven-plugin.version>
        <dbcp.version>1.4</dbcp.version>
        <junit.version>4.12</junit.version>
        <mysql.version>8.0.13</mysql.version>
        <cglib.version>3.3.0</cglib.version>
        <commons-lang3.version>3.3.2</commons-lang3.version>
        <jedis.version>2.6.0</jedis.version>
        <ws.rs-api.version>2.1</ws.rs-api.version>
        <org.cxf-version>3.3.2</org.cxf-version>
        <jackson.version>2.11.1</jackson.version>
        <catalina.version>8.5.11</catalina.version>
        <druid.version>1.1.8</druid.version>
        <yaml.version>1.3</yaml.version>
        <snakeyaml.version>1.32</snakeyaml.version>
        <javafx.version>11.0.2</javafx.version>
        <junit.version>4.12</junit.version>
        <rabbitmq.version>5.9.0</rabbitmq.version>
        <servlet.version>4.0.1</servlet.version>
        <poi.version>4.1.2</poi.version>
        <czy.version>1.0-SNAPSHOT</czy.version>

    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>http</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>jdbc</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>log</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>car_server</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>core</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>fx</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>javase_study</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>mq</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>psychology</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>com.czy</groupId>
                <artifactId>util</artifactId>
                <version>${czy.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <!--读写excel/word-->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-scratchpad</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml-schemas</artifactId>
                <version>${poi.version}</version>
            </dependency>

            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>${servlet.version}</version>
            </dependency>
            <!--rabbitmq-->
            <dependency>
                <groupId>com.rabbitmq</groupId>
                <artifactId>amqp-client</artifactId>
                <version>${rabbitmq.version}</version>
            </dependency>

            <!--动态代理-->
            <dependency>
                <groupId>cglib</groupId>
                <artifactId>cglib</artifactId>
                <version>${cglib.version}</version>
            </dependency>
            <!--json-->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <!--yml配置文件-->
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jyaml</groupId>
                <artifactId>jyaml</artifactId>
                <version>${yaml.version}</version>
            </dependency>
            <!--数据库-->
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>${mysql.version}</version>
            </dependency>
            <!--redis缓存-->
            <dependency>
                <groupId>redis.clients</groupId>
                <artifactId>jedis</artifactId>
                <version>${jedis.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <!--        javafx-->
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-graphics</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-base</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-web</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-swing</artifactId>
                <version>${javafx.version}</version>
            </dependency>
            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-media</artifactId>
                <version>${javafx.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <!--  <resource>
              <resource>
                  <directory>${basedir}/src/main/resource</directory>
              </resource>
          </resource>-->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <release>${java.version}</release>
                    <compilerArgs>
                        <arg>-Xlint:preview</arg>
                        <arg>-Xlint:unchecked</arg>
                        <arg>--enable-preview</arg> <!--使用新版本的预览特性-->
                        <arg>-parameters</arg><!--记录形参真实名-->
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <nonFilteredFileExtensions>
                        <nonFilteredFileExtension>xlsx</nonFilteredFileExtension>
                        <nonFilteredFileExtension>xls</nonFilteredFileExtension>
                    </nonFilteredFileExtensions>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>